# wqu

./: .gitignore  .tool-versions  Bitcoin_cash.csv  CLAUDE.md  Ethereum_classic.csv  GEMINI.md  Group Work Project #2.pages  LICENSE  MScFE_622_STOCHASTIC_MODELING_Group_Work_Project_1.ipynb  README.md  Solana.csv  calc.py  main.ipynb  main.py  openai.sh  pyproject.toml  requirements.txt  sample_pymupdf.py  test.sh
.ipynb_checkpoints/: EuroMillion_HMM-checkpoint.ipynb  main-checkpoint.iynb  rust1-checkpoint.ipynb
MScFE620-Derivative-Pricing/: EuroMillion_HMM.ipynb  euromillions-draw-history.csv
MScFE622-Stochastic-Modeling/M2/: Question1.py  Question13.py  Question15.py  Question3.py  Question5.py  Question9.py
MScFE622-Stochastic-Modeling/M3/: CLAUDE.md  GEMINI.md  Step1A.py  Step2B.py  main.ipynb  view_h5.py
