[project]
name = "wqu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.13.3"
dependencies = [
    "hmmlearn>=0.3.3",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "scipy>=1.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
